# test-fastapi-app

./: .env.example  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  main.py  prometheus.yml  pyproject.toml  requirements.txt  run.py  test_enhanced.py  test_main.py
.github/workflows/: build-and-push.yml
app/: exceptions.py  models.py  services.py
app/core/: __init__.py  config.py  observability.py  storage.py
app/routers/: __init__.py  actuator.py  entities.py  items.py  simulation.py  test_scenarios.py
flux/: kustomization.yaml  oci-repository.yaml
k8s/: deployment.yaml  kustomization.yaml  service.yaml
