[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "test-fastapi-app"
version = "0.1.0"
description = "A FastAPI test application with monitoring and observability"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "k8s-lovers-korea"},
]

dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
    "requests>=2.31.0",
    "httpx>=0.25.0",
    "psutil>=5.9.6",
    "python-dotenv>=1.0.0",
    "opentelemetry-distro>=0.45b0",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "opentelemetry-instrumentation-requests>=0.45b0",
    "opentelemetry-exporter-otlp>=0.45b0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.3",
    "httpx>=0.25.2",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.3",
    "httpx>=0.25.2",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
